--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
-        <meta name="description" content="Responsive HTML5 Single Page Design Template">
-        <meta name="keywords" content="Bootstrap, Bootstrap 3, Font Awesome, Ion Icons, Ionicons, HTML5, CSS, CSS3, JavaScript, Template, JS, jQuery, Ajax, work, single-page, one-page, Theme, Twitter, Facebook">
+        <meta name="description" content="Brain Fitness Startup">
+        <meta name="keywords" content="Edlogiq, Brain fitness, Neuroscience, Brain Training Games, Education, India, Abhishek, Krishna, Raghu, Anish, abhicris, Dixy,">
 
         <title>Edlogiq</title>
 
