--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
+        <meta name="description" content="Brain Fitness Startup">
+        <meta name="keywords" content="brain, training, brain training, brain training games, neuroscience, cognitive training, neuroplasticity, concentration, memory, attention, visual, flexibility, speed, how to improve">
+        <meta name="author" content="Abhishek Krishna">
 
         <title>Edlogiq</title>
 
@@ -442,7 +445,7 @@ h2{
                                     <div class="media-body">
                                         <address>
                                             <strong>AVI Edlogiq Pvt. Ltd.</strong><br>
-                                            C-109, Sector 50<br>
+                                            H-187, Nar Vihar-2, Sector 34<br>
                                             Noida (NCR), UP<br>
                                             India, 201301
                                         </address>
@@ -451,7 +454,7 @@ h2{
                                 <div class="media">
                                     <i class="pull-left ion-ios7-telephone-outline fa-2x text-muted"></i>
                                     <div class="media-body">
-                                       (+91) 120 4334079
+                                       (+91) 8285360565
                                     </div>
                                 </div>
                                 <div class="media">
