--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ img:hover,
 </style>
                         <div class="col-xs-12" align="center">
                             <span class="imgWrap">
-                                <a href="http://www.neurongym.com" target="_blank"><img style="max-height:100px;"src="images/p1.jpg"></a>
+                                <a href="http://www.neurongym.com" target="_blank"><img style="max-height:100px;"src="images/p1.png"></a>
                             </span>
                             <ul class="list-unstyled">
                                 <h4>Enhance your brain</h4>
